gcc/testsuite/gm2/pim/fail/largeconst2.mod
MODULE largeconst2 ;

CONST
   foo = 123456789123456789123456791234567891234567891234567891234567891234567912345678912345678912345678912345678912345679123456789123456789123456789123456789123456791234567891234567891234567891234567891234567912345678912345678912345678912345678912345679123456789123456789 ;

BEGIN
END largeconst2.